@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2013-09-25
  * Daemonized wingman.pl. You now need the Daemon::Control perl module. You can also add a "wingman/pid_file_path" directive to your config file if you want to control where the pid is stored. 
+ * Added --watch-only as a command line flag to wingman.pl so that you can specify a tube to watch other than the default tube. This is useful when you have different servers that you wish to handle different tubes. 
 
 2013-09-21
  * Fixed a major security hole where it was possible to create new objects in some cases when you shouldn't be able to.
